--- a/lucifer-sunshine/music/style.css
+++ b/lucifer-sunshine/music/style.css
@@ -95,6 +95,9 @@ body {
 @media screen and (max-width: 1000px) {
 
     /* --- NAVIGATION --- */
+    body {
+        overflow-x: hidden;
+    }
 
     .nav-list {
         flex-direction: column;
@@ -112,27 +115,28 @@ body {
     }
 
     .nav-mobile-hidden {
-        height: 100%;
+        height: 500%;
         background-color: #ff8549;
         top: 0;
-        position: absolute;
+        position: fixed;
         width: 60vw;
         z-index: 10;
-        transform:translateX(100vw);
+        transform:translateX(110vw);
         transition: transform 500ms;
         overflow: hidden;
     }
 
     .nav-mobile-visible {
-        height: 100%;
+        height: 500%;
         background-color: #ff8549;
         top: 0;
         transform: translateX(40vw);
-        position: absolute;
+        position: fixed;
         width: 60vw;
         box-shadow: 0 -10px 20px var(--banner-orange-text);
         transition: transform 500ms;
         z-index: 10;
+        overflow: hidden;
     }
 
     .nav-overlay-active {
@@ -213,5 +217,17 @@ body {
 
     .hamburger-menu-btn.open .hamburger-lines::after {
         transform: rotate(-45deg) translate(-40px, -40px);
+    }
+}
+
+@media screen and (max-width: 1600px) {
+    .spotify-embed-wrapper {
+        width: 90%;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .spotify-embed-wrapper {
+        grid-template-columns: auto;
     }
 }
